Persistence-and-Advanced-Workload-Management/demos/m2-hpa/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globomantics-website
  namespace: implement-hpa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: globomantics-website
  template:
    metadata:
      labels:
        app: globomantics-website
    spec:
      containers:
        - name: globomantics-web
          image: ghcr.io/rummens/pluralsight-globomantics-website-with-db:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
