Persistence-and-Advanced-Workload-Management/demos/m2-hpa/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: globomantics-website
  namespace: implement-hpa
spec:
  selector:
    app: globomantics-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: web
  type: ClusterIP
