Persistence-and-Advanced-Workload-Management/demos/m2-hpa/route-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: globomantics-website
  namespace: implement-hpa
spec:
  to:
    kind: Service
    name: globomantics-website
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
